# sejmofil-neo4j-mcp

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  HYBRID_SEARCH_SUMMARY.md  QUICKSTART.md  README.md  USER_QUESTIONS_AND_DOCUMENTATION.md  db_schema.json  docker-compose.yml  pyproject.toml  results.txt  test_changes.py
scripts/: analyze_stages.py  compare_search_methods.py  debug_queries.py  detailed_stats.py  explore_database.py  fetch_db_schema.py  final_search_test.py  generate_results.py  quick_test_vector.py  test_hybrid_search.py  test_index_deep_dive.py  test_new_functions.py  test_node_neighbors.py  test_query_syntax.py  test_realistic_queries.py  test_realistic_simple.py  test_search_zwiazki.py  test_updated_search.py
sejmofil_mcp/: __init__.py  __main__.py  config.py  embeddings.py  models.py  neo4j_client.py  queries.py  server.py
